Added to index.html header and paragraph element

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-
+    <h1>
+        Bike Watching
+    </h1>
+    <p>
+        It's an interactive bike thing. It watches bikes.
+    </p>
 </body>
 
 </html>
