--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bike Watching</title>
+    <link rel="stylesheet" href="global.css">
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+    <!-- Mapbox GL JS CSS -->
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+
 </head>
 
 <body>
     <h1>
-        Bike Watching
+        🚴🏼‍♀️Bike Watching
     </h1>
     <p>
         It's an interactive bike thing. It watches bikes.
     </p>
+    <div id="map">
+        <svg></svg>
+    </div>
+
+    <!-- Mapbox GL JS JavaScript -->
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="map.js"></script>
+
 </body>
 
 </html>
